minijava/macrojava.output
Terminals unused in grammar

   KEYWORD
   OPERATOR


State 18 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MacroDefinitionList MainClass TypeDeclarationList

    2 MacroDefinitionList: /* empty */
    3                    | MacroDefinitionList MacroDefinition

    4 TypeDeclarationList: /* empty */
    5                    | TypeDeclarationList TypeDeclaration

    6 TypeDeclaration: CLASS IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'
    7                | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'

    8 VarDeclarationList: /* empty */
    9                   | VarDeclarationList Type IDENTIFIER ';'

   10 ParamList: /* empty */
   11          | MidParam IDENTIFIER

   12 MidParam: /* empty */
   13         | MidParam ','

   14 MethodDeclarationList: /* empty */
   15                      | MethodDeclarationList MethodDeclaration

   16 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

   17 StatementList: /* empty */
   18              | StatementList Statement

   19 Type: INT '[' ']'
   20     | BOOLEAN
   21     | INT
   22     | IDENTIFIER

   23 MethodDeclaration: PUBLIC Type IDENTIFIER '(' ParamList ')' '{' VarDeclarationList StatementList RETURN Expression ';' '}'

   24 Statement: '{' StatementList '}'
   25          | IDENTIFIER '=' Expression ';'
   26          | IF '(' Expression ')' Statement
   27          | IF '(' Expression ')' Statement ELSE Statement
   28          | WHILE '(' Expression ')' Statement
   29          | IDENTIFIER '(' ExpressionList ')' ';'

   30 ExpressionList: /* empty */
   31               | MidExpression Expression

   32 MidExpression: /* empty */
   33              | MidExpression ','

   34 Expression: PrimaryExpression '&' PrimaryExpression
   35           | PrimaryExpression '<' PrimaryExpression
   36           | PrimaryExpression '+' PrimaryExpression
   37           | PrimaryExpression '-' PrimaryExpression
   38           | PrimaryExpression '*' PrimaryExpression
   39           | PrimaryExpression '/' PrimaryExpression
   40           | PrimaryExpression '[' PrimaryExpression ']'
   41           | PrimaryExpression '.' IDENTIFIER
   42           | PrimaryExpression '.' IDENTIFIER '(' ExpressionList ')'
   43           | IDENTIFIER '(' ExpressionList ')'

   44 PrimaryExpression: INTVAL
   45                  | BOOLVAL
   46                  | IDENTIFIER
   47                  | THIS
   48                  | NEW INT '[' Expression ']'
   49                  | NEW IDENTIFIER '(' ')'
   50                  | '!' Expression
   51                  | '(' Expression ')'

   52 MacroDefinition: MacroDefStatement
   53                | MacroDefExpression

   54 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IdentifierList ')' '{' StatementList '}'

   55 MacroDefExpression: '#' DEFINE IDENTIFIER '(' Expression ')'
   56                   | '#' DEFINE IDENTIFIER '(' PrimaryExpression ')'

   57 IdentifierList: /* empty */
   58               | MidIdentifier IDENTIFIER

   59 MidIdentifier: /* empty */
   60              | MidIdentifier ','


Terminals, with rules where they appear

$end (0) 0
'!' (33) 50
'#' (35) 54 55 56
'&' (38) 34
'(' (40) 16 23 26 27 28 29 42 43 49 51 54 55 56
')' (41) 16 23 26 27 28 29 42 43 49 51 54 55 56
'*' (42) 38
'+' (43) 36
',' (44) 13 33 60
'-' (45) 37
'.' (46) 16 41 42
'/' (47) 39
';' (59) 9 16 23 25 29
'<' (60) 35
'=' (61) 25
'[' (91) 16 19 40 48
']' (93) 16 19 40 48
'{' (123) 6 7 16 23 24 54
'}' (125) 6 7 16 23 24 54
error (256)
INTVAL (258) 44
BOOLVAL (259) 45
KEYWORD (260)
OPERATOR (261)
IDENTIFIER (262) 6 7 9 11 16 22 23 25 29 41 42 43 46 49 54 55 56 58
THIS (263) 47
NEW (264) 48 49
RETURN (265) 23
CLASS (266) 6 7 16
DEFINE (267) 54 55 56
PUBLIC (268) 16 23
STATIC (269) 16
VOID (270) 16
INT (271) 19 21 48
BOOLEAN (272) 20
IF (273) 26 27
ELSE (274) 27
WHILE (275) 28
EXTENDS (276) 7
STRING (277) 16


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Goal (42)
    on left: 1, on right: 0
MacroDefinitionList (43)
    on left: 2 3, on right: 1 3
TypeDeclarationList (44)
    on left: 4 5, on right: 1 5
TypeDeclaration (45)
    on left: 6 7, on right: 5
VarDeclarationList (46)
    on left: 8 9, on right: 6 7 9 23
ParamList (47)
    on left: 10 11, on right: 23
MidParam (48)
    on left: 12 13, on right: 11 13
MethodDeclarationList (49)
    on left: 14 15, on right: 6 7 15
MainClass (50)
    on left: 16, on right: 1
StatementList (51)
    on left: 17 18, on right: 18 23 24 54
Type (52)
    on left: 19 20 21 22, on right: 9 23
MethodDeclaration (53)
    on left: 23, on right: 15
Statement (54)
    on left: 24 25 26 27 28 29, on right: 18 26 27 28
ExpressionList (55)
    on left: 30 31, on right: 29 42 43
MidExpression (56)
    on left: 32 33, on right: 31 33
Expression (57)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 16 23 25 26 27
    28 31 48 50 51 55
PrimaryExpression (58)
    on left: 44 45 46 47 48 49 50 51, on right: 34 35 36 37 38 39 40
    41 42 56
MacroDefinition (59)
    on left: 52 53, on right: 3
MacroDefStatement (60)
    on left: 54, on right: 52
MacroDefExpression (61)
    on left: 55 56, on right: 53
IdentifierList (62)
    on left: 57 58, on right: 54
MidIdentifier (63)
    on left: 59 60, on right: 58 60


state 0

    0 $accept: . Goal $end

    $default  reduce using rule 2 (MacroDefinitionList)

    Goal                 go to state 1
    MacroDefinitionList  go to state 2


state 1

    0 $accept: Goal . $end

    $end  shift, and go to state 3


state 2

    1 Goal: MacroDefinitionList . MainClass TypeDeclarationList
    3 MacroDefinitionList: MacroDefinitionList . MacroDefinition

    CLASS  shift, and go to state 4
    '#'    shift, and go to state 5

    MainClass           go to state 6
    MacroDefinition     go to state 7
    MacroDefStatement   go to state 8
    MacroDefExpression  go to state 9


state 3

    0 $accept: Goal $end .

    $default  accept


state 4

   16 MainClass: CLASS . IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    IDENTIFIER  shift, and go to state 10


state 5

   54 MacroDefStatement: '#' . DEFINE IDENTIFIER '(' IdentifierList ')' '{' StatementList '}'
   55 MacroDefExpression: '#' . DEFINE IDENTIFIER '(' Expression ')'
   56                   | '#' . DEFINE IDENTIFIER '(' PrimaryExpression ')'

    DEFINE  shift, and go to state 11


state 6

    1 Goal: MacroDefinitionList MainClass . TypeDeclarationList

    $default  reduce using rule 4 (TypeDeclarationList)

    TypeDeclarationList  go to state 12


state 7

    3 MacroDefinitionList: MacroDefinitionList MacroDefinition .

    $default  reduce using rule 3 (MacroDefinitionList)


state 8

   52 MacroDefinition: MacroDefStatement .

    $default  reduce using rule 52 (MacroDefinition)


state 9

   53 MacroDefinition: MacroDefExpression .

    $default  reduce using rule 53 (MacroDefinition)


state 10

   16 MainClass: CLASS IDENTIFIER . '{' PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    '{'  shift, and go to state 13


state 11

   54 MacroDefStatement: '#' DEFINE . IDENTIFIER '(' IdentifierList ')' '{' StatementList '}'
   55 MacroDefExpression: '#' DEFINE . IDENTIFIER '(' Expression ')'
   56                   | '#' DEFINE . IDENTIFIER '(' PrimaryExpression ')'

    IDENTIFIER  shift, and go to state 14


state 12

    1 Goal: MacroDefinitionList MainClass TypeDeclarationList .
    5 TypeDeclarationList: TypeDeclarationList . TypeDeclaration

    CLASS  shift, and go to state 15

    $default  reduce using rule 1 (Goal)

    TypeDeclaration  go to state 16


state 13

   16 MainClass: CLASS IDENTIFIER '{' . PUBLIC STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    PUBLIC  shift, and go to state 17


state 14

   54 MacroDefStatement: '#' DEFINE IDENTIFIER . '(' IdentifierList ')' '{' StatementList '}'
   55 MacroDefExpression: '#' DEFINE IDENTIFIER . '(' Expression ')'
   56                   | '#' DEFINE IDENTIFIER . '(' PrimaryExpression ')'

    '('  shift, and go to state 18


state 15

    6 TypeDeclaration: CLASS . IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'
    7                | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 19


state 16

    5 TypeDeclarationList: TypeDeclarationList TypeDeclaration .

    $default  reduce using rule 5 (TypeDeclarationList)


state 17

   16 MainClass: CLASS IDENTIFIER '{' PUBLIC . STATIC VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    STATIC  shift, and go to state 20


state 18

   54 MacroDefStatement: '#' DEFINE IDENTIFIER '(' . IdentifierList ')' '{' StatementList '}'
   55 MacroDefExpression: '#' DEFINE IDENTIFIER '(' . Expression ')'
   56                   | '#' DEFINE IDENTIFIER '(' . PrimaryExpression ')'

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    IDENTIFIER  [reduce using rule 59 (MidIdentifier)]
    ','         reduce using rule 59 (MidIdentifier)
    $default    reduce using rule 57 (IdentifierList)

    Expression         go to state 28
    PrimaryExpression  go to state 29
    IdentifierList     go to state 30
    MidIdentifier      go to state 31


state 19

    6 TypeDeclaration: CLASS IDENTIFIER . '{' VarDeclarationList MethodDeclarationList '}'
    7                | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'

    EXTENDS  shift, and go to state 32
    '{'      shift, and go to state 33


state 20

   16 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC . VOID IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    VOID  shift, and go to state 34


state 21

   44 PrimaryExpression: INTVAL .

    $default  reduce using rule 44 (PrimaryExpression)


state 22

   45 PrimaryExpression: BOOLVAL .

    $default  reduce using rule 45 (PrimaryExpression)


state 23

   43 Expression: IDENTIFIER . '(' ExpressionList ')'
   46 PrimaryExpression: IDENTIFIER .

    '('  shift, and go to state 35

    $default  reduce using rule 46 (PrimaryExpression)


state 24

   47 PrimaryExpression: THIS .

    $default  reduce using rule 47 (PrimaryExpression)


state 25

   48 PrimaryExpression: NEW . INT '[' Expression ']'
   49                  | NEW . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 36
    INT         shift, and go to state 37


state 26

   51 PrimaryExpression: '(' . Expression ')'

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    Expression         go to state 38
    PrimaryExpression  go to state 39


state 27

   50 PrimaryExpression: '!' . Expression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    Expression         go to state 40
    PrimaryExpression  go to state 39


state 28

   55 MacroDefExpression: '#' DEFINE IDENTIFIER '(' Expression . ')'

    ')'  shift, and go to state 41


state 29

   34 Expression: PrimaryExpression . '&' PrimaryExpression
   35           | PrimaryExpression . '<' PrimaryExpression
   36           | PrimaryExpression . '+' PrimaryExpression
   37           | PrimaryExpression . '-' PrimaryExpression
   38           | PrimaryExpression . '*' PrimaryExpression
   39           | PrimaryExpression . '/' PrimaryExpression
   40           | PrimaryExpression . '[' PrimaryExpression ']'
   41           | PrimaryExpression . '.' IDENTIFIER
   42           | PrimaryExpression . '.' IDENTIFIER '(' ExpressionList ')'
   56 MacroDefExpression: '#' DEFINE IDENTIFIER '(' PrimaryExpression . ')'

    '['  shift, and go to state 42
    ')'  shift, and go to state 43
    '.'  shift, and go to state 44
    '&'  shift, and go to state 45
    '<'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50


state 30

   54 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IdentifierList . ')' '{' StatementList '}'

    ')'  shift, and go to state 51


state 31

   58 IdentifierList: MidIdentifier . IDENTIFIER
   60 MidIdentifier: MidIdentifier . ','

    IDENTIFIER  shift, and go to state 52
    ','         shift, and go to state 53


state 32

    7 TypeDeclaration: CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' VarDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 54


state 33

    6 TypeDeclaration: CLASS IDENTIFIER '{' . VarDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 8 (VarDeclarationList)

    VarDeclarationList  go to state 55


state 34

   16 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID . IDENTIFIER '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    IDENTIFIER  shift, and go to state 56


state 35

   43 Expression: IDENTIFIER '(' . ExpressionList ')'

    ')'       reduce using rule 30 (ExpressionList)
    $default  reduce using rule 32 (MidExpression)

    ExpressionList  go to state 57
    MidExpression   go to state 58


state 36

   49 PrimaryExpression: NEW IDENTIFIER . '(' ')'

    '('  shift, and go to state 59


state 37

   48 PrimaryExpression: NEW INT . '[' Expression ']'

    '['  shift, and go to state 60


state 38

   51 PrimaryExpression: '(' Expression . ')'

    ')'  shift, and go to state 61


state 39

   34 Expression: PrimaryExpression . '&' PrimaryExpression
   35           | PrimaryExpression . '<' PrimaryExpression
   36           | PrimaryExpression . '+' PrimaryExpression
   37           | PrimaryExpression . '-' PrimaryExpression
   38           | PrimaryExpression . '*' PrimaryExpression
   39           | PrimaryExpression . '/' PrimaryExpression
   40           | PrimaryExpression . '[' PrimaryExpression ']'
   41           | PrimaryExpression . '.' IDENTIFIER
   42           | PrimaryExpression . '.' IDENTIFIER '(' ExpressionList ')'

    '['  shift, and go to state 42
    '.'  shift, and go to state 44
    '&'  shift, and go to state 45
    '<'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50


state 40

   50 PrimaryExpression: '!' Expression .

    $default  reduce using rule 50 (PrimaryExpression)


state 41

   55 MacroDefExpression: '#' DEFINE IDENTIFIER '(' Expression ')' .

    $default  reduce using rule 55 (MacroDefExpression)


state 42

   40 Expression: PrimaryExpression '[' . PrimaryExpression ']'

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 63


state 43

   56 MacroDefExpression: '#' DEFINE IDENTIFIER '(' PrimaryExpression ')' .

    $default  reduce using rule 56 (MacroDefExpression)


state 44

   41 Expression: PrimaryExpression '.' . IDENTIFIER
   42           | PrimaryExpression '.' . IDENTIFIER '(' ExpressionList ')'

    IDENTIFIER  shift, and go to state 64


state 45

   34 Expression: PrimaryExpression '&' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 65


state 46

   35 Expression: PrimaryExpression '<' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 66


state 47

   36 Expression: PrimaryExpression '+' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 67


state 48

   37 Expression: PrimaryExpression '-' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 68


state 49

   38 Expression: PrimaryExpression '*' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 69


state 50

   39 Expression: PrimaryExpression '/' . PrimaryExpression

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 62
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    PrimaryExpression  go to state 70


state 51

   54 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IdentifierList ')' . '{' StatementList '}'

    '{'  shift, and go to state 71


state 52

   58 IdentifierList: MidIdentifier IDENTIFIER .

    $default  reduce using rule 58 (IdentifierList)


state 53

   60 MidIdentifier: MidIdentifier ',' .

    $default  reduce using rule 60 (MidIdentifier)


state 54

    7 TypeDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' VarDeclarationList MethodDeclarationList '}'

    '{'  shift, and go to state 72


state 55

    6 TypeDeclaration: CLASS IDENTIFIER '{' VarDeclarationList . MethodDeclarationList '}'
    9 VarDeclarationList: VarDeclarationList . Type IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 73
    INT         shift, and go to state 74
    BOOLEAN     shift, and go to state 75

    $default  reduce using rule 14 (MethodDeclarationList)

    MethodDeclarationList  go to state 76
    Type                   go to state 77


state 56

   16 MainClass: CLASS IDENTIFIER '{' PUBLIC STATIC VOID IDENTIFIER . '(' STRING '[' ']' IDENTIFIER ')' '{' IDENTIFIER '.' IDENTIFIER '.' IDENTIFIER '(' Expression ')' ';' '}'

    '('  shift, and go to state 78


state 57

   43 Expression: IDENTIFIER '(' ExpressionList . ')'

    ')'  shift, and go to state 79


state 58

   31 ExpressionList: MidExpression . Expression
   33 MidExpression: MidExpression . ','

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    ','         shift, and go to state 80
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    Expression         go to state 81
    PrimaryExpression  go to state 39


state 59

   49 PrimaryExpression: NEW IDENTIFIER '(' . ')'

    ')'  shift, and go to state 82


state 60

   48 PrimaryExpression: NEW INT '[' . Expression ']'

    INTVAL      shift, and go to state 21
    BOOLVAL     shift, and go to state 22
    IDENTIFIER  shift, and go to state 23
    THIS        shift, and go to state 24
    NEW         shift, and go to state 25
    '('         shift, and go to state 26
    '!'         shift, and go to state 27

    Expression         go to state 83
    PrimaryExpression  go to state 39


state 61

   51 PrimaryExpression: '(' Expression ')' .

    $default  reduce using rule 51 (PrimaryExpression)


state 62

   46 PrimaryExpression: IDENTIFIER .

    $default  reduce using rule 46 (PrimaryExpression)


state 63

   40 Expression: PrimaryExpression '[' PrimaryExpression . ']'

    ']'  shift, and go to state 84


state 64

   41 Expression: PrimaryExpression '.' IDENTIFIER .
   42           | PrimaryExpression '.' IDENTIFIER . '(' ExpressionList ')'

    '('  shift, and go to state 85

    $default  reduce using rule 41 (Expression)


state 65

   34 Expression: PrimaryExpression '&' PrimaryExpression .

    $default  reduce using rule 34 (Expression)


state 66

   35 Expression: PrimaryExpression '<' PrimaryExpression .

    $default  reduce using rule 35 (Expression)


state 67

   36 Expression: PrimaryExpression '+' PrimaryExpression .

    $default  reduce using rule 36 (Expression)


state 68

   37 Expression: PrimaryExpression '-' PrimaryExpression .

    $default  reduce using rule 37 (Expression)


state 69

   38 Expression: PrimaryExpression '*' PrimaryExpression .

    $default  reduce using rule 38 (Expression)


state 70

   39 Expression: PrimaryExpression '/' PrimaryExpression .

    $default  reduce using rule 39 (Expression)


state 71

   54 MacroDefStatement: '#' DEFINE IDENTIFIER '(' IdentifierList ')' '{' . StatementList '}'

    $default  reduce using rule 17 (StatementList)

    StatementList  go to state 86


state 72

    7 TypeDeclaration: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . VarDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 8 (VarDeclarationList)

    VarDeclarationList  go to state 87


state 73

   22 Type: IDENTIFIER .

    $default  reduce using rule 22 (Type)


state 74

   19 Type: INT . '[' ']'
   21     | INT .

    '['  shift, and go to state 88

    $default  reduce using rule 21 (Type)


state 75

   20 Type: BOOLEAN .

    $default  reduce using rule 20 (Type)


state 76

    6 TypeDeclaration: CLASS IDENTIFIER '{' VarDeclarationList MethodDeclarationList . '}'
   15 MethodDeclarationList: MethodDeclarationList . MethodDeclaration

    PUBLIC  shift, and go to state 89
    '}'     shift, and go to state 90

    MethodDeclaration  go to state 91


state 77

    9 VarDeclarationList: VarDeclarationList Type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 92


state 78
